# iam-svc

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/adapters/inbound/: http.rs
src/adapters/outbound/: memory_store.rs
src/application/: token_service.rs
src/domain/: error.rs  mod.rs  model.rs  ports.rs
